fix: fixed bug where background colors would bleed into each other

--- a/src/app/about/about.module.css
+++ b/src/app/about/about.module.css
@@ -1,17 +1,10 @@
-:root {
-    --off-yellow: #fdf4d5;
-}
-  
-body {
-    background-color: #95a7bf;
-}
-  
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 2rem;
     gap: 2rem;
+    background-color: #95a7bf;
 }
   
 .header {
