--- a/src/app/about/board/board.module.css
+++ b/src/app/about/board/board.module.css
@@ -1,20 +1,10 @@
-:root {
-  --off-yellow: #fdf4d5;
-  --primary-blue: #003366;
-}
-
-html, body {
-  background-color: #95a7bf;
-  height: auto;
-  overflow: auto;
-}
-
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 2rem;
   gap: 2rem;
+  background-color: #95a7bf;
 }
 
 .header {
